# dagster-lakefs

./: .gitignore  Makefile  README.md  pyproject.toml
dagster_lakefs/: assets.py  dbt.py  definitions.py  resources.py  sensors.py
duckdb_dbt/: dbt_project.yml  profiles.yml
duckdb_dbt/models/core/: fail_fact.sql  schema.yml  test_fact.sql
duckdb_dbt/models/staging/: schema.yml  sources.yml  stg_people.sql
scripts/: lakefs_setup.py  make_repo.py
